# SpiderProject

./: Backside.cpp  Backside.h  Basket.cpp  Basket.h  Bounds.cpp  Bounds.h  Button.cpp  Button.h  CMakeLists.txt  Card.cpp  Card.h  CardButton.cpp  CardButton.h  Deck.cpp  Deck.h  Field.cpp  Field.h  Fonts.cpp  Fonts.h  Game.cpp  Game.h  Images.cpp  Images.h  Menu.cpp  Menu.h  Notes.txt  Rank.cpp  Rank.h  Score.cpp  Score.h  Stack.cpp  Stack.h  StackFrame.cpp  StackFrame.h  States.cpp  States.h  main.cpp
